<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="admin_title" translatable="false">Administration</string>
    <string name="new_theme_button" translatable="true">New Topic</string>
    <string name="button_name" translatable="true">Change name</string>
    <string name="button_delete" translatable="true">Delete</string>
    <string name="supermodo_name" translatable="true">NAME SURNAME</string>
    <string name="supermodo_title" translatable="false">Super-Moderator :</string>
    <string name="button_supermodo" translatable="false">Change Super-Moderator</string>
    <string name="baserole_reader" translatable="true">Reader</string>
    <string name="baserole_editor" translatable="true">Writer</string>
    <string name="GestionCompte" translatable="true">Account Management </string>
    <string name="NomPrenom" translatable="true"> Name Surname </string>
    <string name="MDP" translatable="true">CHANGE PASSWORD  </string>
    <string name="FonctionParTheme" translatable="true">Function by topic  </string>
    <string name="ModifierDescription" translatable="true">Change description </string>
    <string name="AproposMoi" translatable="true">About me</string>
    <string name="SuppCompte" translatable="true">Delete Account</string>
    <string name="UtilisateurNom" translatable="true">Username </string>
    <string name="AjoutImage" translatable="true">Add Image </string>
    <string name="AjoutVideo" translatable="true">Add Video </string>
    <string name="publier" translatable="true">Publish </string>
    <string name="connexion" translatable="false">Connexion</string>
    <string name="creeUnCompte" translatable="true">Create Account</string>
    <string name="avezVousCompte" translatable="true">Have you already an account ?</string>
    <string name="refresh">Refresh</string>
    <string name="change_picture">Change picture</string>
    <string name="add_image">Add Image</string>
    <string name="add_text">Add Text</string>
    <string name="mod_ration">Modération</string>
</resources>