<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_post_icon"
    tools:context=".AddPostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/top"
        app:popupTheme="@style/Theme.Ensiblog.PopupOverlay"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ENSI"
            android:textColor="@color/design_default_color_surface"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BLOG"
            android:textColor="@color/Ciel"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Ciel">

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/theme_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                </LinearLayout>
            </HorizontalScrollView>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_View"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/list_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UtilisateurNom"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scroll_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/imageViewUserPicture"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.302" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonPublish"
        app:layout_constraintEnd_toEndOf="@+id/buttonPublish"
        app:layout_constraintStart_toStartOf="@+id/buttonPublish"
        app:layout_constraintTop_toBottomOf="@+id/scroll_View"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/buttonAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/top"
            android:text="Add Image"
            app:layout_constraintEnd_toStartOf="@+id/buttonAddText"
            app:layout_constraintHorizontal_bias="0.765"
            app:layout_constraintStart_toStartOf="@+id/buttonPublish"
            app:layout_constraintTop_toBottomOf="@+id/scroll_View" />

        <Button
            android:id="@+id/buttonAddText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/top"
            android:text="Add Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_View"
            app:layout_constraintVertical_bias="0.07" />

        <Button
            android:id="@+id/buttonAddVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/top"
            android:text="@string/AjoutVideo"
            app:layout_constraintEnd_toEndOf="@+id/buttonPublish"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toEndOf="@+id/buttonAddText"
            app:layout_constraintTop_toBottomOf="@+id/scroll_View" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonPublish"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/red"
        android:text="@string/publier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewUserPicture"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="115dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
